--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="masthead">
   <div class="position-absolute top-0 end-0 mt-3 me-3 d-block ">
-      <a class="btn btn-success" routerLink="/login">Login</a>
+      <a class="btn btn-success" routerLink="/login">Ingresar</a>
   </div>
   <div class="container">
       <div class="masthead-subheading">Bienvenido!</div>
