--- a/src/app/components/account/forgot-password/forgot-password.component.html
+++ b/src/app/components/account/forgot-password/forgot-password.component.html
@@ -1,15 +1,18 @@
 <mat-card class="shipping-card">
     <mat-card-header>
-      <mat-card-title>Ingrese su Email</mat-card-title>
+      <mat-card-title>Ingrese su Correo electrónico</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <form (ngSubmit)="onSubmit()">
         <div class="row">
           <mat-form-field>
-            <mat-label>Email</mat-label>
-            <input matInput placeholder="john_doe@example.com" [formControl]="email" required>
-            <mat-error *ngIf="email.invalid">{{ getErrorMessage() }}</mat-error>
+            <mat-label>Correo electrónico</mat-label>
+            <input matInput [formControl]="email" required>
+            <mat-error *ngIf="email.invalid">{{ getErrorMessage() }}</mat-error>            
           </mat-form-field>
+        </div>
+        <div class="row" *ngIf="responseMessage">         
+            <p>{{ responseMessage }}</p> <!-- Muestra el mensaje de respuesta -->         
         </div>
         <button mat-raised-button color="accent" type="submit" [disabled]="email.invalid">Guardar</button>
       </form>
