--- a/src/app/components/account/reset-password/reset-password.component.html
+++ b/src/app/components/account/reset-password/reset-password.component.html
@@ -4,7 +4,7 @@
     </mat-card-header>
     <mat-card-content>
         <form [formGroup]="passwordForm" (ngSubmit)="onSubmit()">
-            
+
             <div class="row">
                 <mat-form-field>
                     <mat-label>Nueva Contraseña</mat-label>
@@ -22,17 +22,24 @@
 
             <div class="row">
                 <mat-form-field>
-                  <mat-label>Confirmar Nueva Contraseña</mat-label>
-                  <input matInput [type]="hide3 ? 'password' : 'text'" formControlName="confirmPassword"  required>
-                  <button mat-icon-button matSuffix (click)="hide3 = !hide3" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide3">
-                    <mat-icon>{{hide3 ? 'visibility_off' : 'visibility'}}</mat-icon>
-                  </button>                
+                    <mat-label>Confirmar Nueva Contraseña</mat-label>
+                    <input matInput [type]="hide3 ? 'password' : 'text'" formControlName="confirmPassword" required>
+                    <button mat-icon-button matSuffix (click)="hide3 = !hide3" [attr.aria-label]="'Hide password'"
+                        [attr.aria-pressed]="hide3">
+                        <mat-icon>{{hide3 ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    </button>
                 </mat-form-field>
-              </div>              
-              
+            </div>
+
             <button mat-raised-button color="accent" type="submit" [disabled]="passwordForm.invalid">
                 Cambiar Contraseña
             </button>
+
+            <div class="row">
+                <div *ngIf="responseMessage">
+                    <p><br>{{ responseMessage }}</p> <!-- Muestra el mensaje de respuesta -->
+                </div>
+            </div>
         </form>
     </mat-card-content>
 </mat-card>
