--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,25 +6,25 @@
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <mat-form-field class="full-width">
-          <mat-label>Email</mat-label>
-          <input matInput placeholder="Email" formControlName="email" required>
+          <mat-label>Correo electrónico</mat-label>
+          <input matInput formControlName="email" required>
           <mat-error *ngIf="loginForm.controls['email'].hasError('required')">
-            Email is <strong>required</strong>
+            Correo electrónico es <strong>requerido</strong>
           </mat-error>
         </mat-form-field>
       </div>
 
       <div class="row">
         <mat-form-field class="full-width">
-          <mat-label>password</mat-label>
-          <input matInput [type]="hide3 ? 'password' : 'text'" placeholder="password" formControlName="password"
+          <mat-label>Contraseña</mat-label>
+          <input matInput [type]="hide3 ? 'password' : 'text'" formControlName="password"
             required>
             <button type="button" mat-icon-button matSuffix (click)="hide3 = !hide3" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide3">
               <mat-icon>{{hide3 ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
             
           <mat-error *ngIf="loginForm.controls['password'].hasError('required')">
-            password is <strong>required</strong>
+            Contraseña es <strong>requerida</strong>
           </mat-error>
         </mat-form-field>
       </div>
