--- a/src/app/components/account/profile/profile.component.html
+++ b/src/app/components/account/profile/profile.component.html
@@ -40,7 +40,7 @@
       <div class="row">
         <mat-form-field class="full-width">
           <mat-label>Teléfono</mat-label>
-          <input matInput formControlName="telefono" (keydown)="formValidator.onlyNumbers($event)">
+          <input matInput type="number" formControlName="telefono" (keydown)="formValidator.onlyNumbers($event)">
           <mat-error *ngIf="!formularioEnviadoExitoso && addressForm.controls['telefono'].hasError('required')">
             Teléfono es <strong>requerido</strong>
           </mat-error>
@@ -53,7 +53,7 @@
       <div class="row">
         <mat-form-field>
           <mat-label>Correo electrónico</mat-label>
-          <input matInput  formControlName="email" required>
+          <input matInput type="email" formControlName="email" required>
           <mat-error *ngIf="!formularioEnviadoExitoso && addressForm.controls['email'].hasError('required')">
             Correo electrónico es <strong>requerido</strong>
           </mat-error>
