--- a/src/app/components/appointment/create-appointment/create-appointment.component.html
+++ b/src/app/components/appointment/create-appointment/create-appointment.component.html
@@ -29,7 +29,7 @@
       <div class="row">
         <mat-form-field class="full-width">
           <mat-label>Teléfono</mat-label>
-          <input matInput formControlName="phoneNumber" (keydown)="formValidator.onlyNumbers($event)">
+          <input matInput type="number" formControlName="phoneNumber" (keydown)="formValidator.onlyNumbers($event)">
           <mat-error *ngIf="addressForm.controls['phoneNumber'].hasError('required')">
             Teléfono es <strong>requerido</strong>
           </mat-error>
@@ -39,7 +39,7 @@
       <div class="row">
         <mat-form-field>
           <mat-label>Correo electrónico</mat-label>
-          <input matInput formControlName="email" required>
+          <input matInput type="email" formControlName="email" required>
           <mat-error *ngIf="addressForm.controls['email'].hasError('required')">
             Correo electrónico es <strong>requerido</strong>
           </mat-error>
