--- a/src/app/components/appointment/cancel-appointment/cancel-appointment.component.html
+++ b/src/app/components/appointment/cancel-appointment/cancel-appointment.component.html
@@ -1,6 +1,15 @@
-<div class="container">
-    <h2>Cancelar Turno</h2>
-    <p>¿Estás seguro de que deseas cancelar tu turno?</p>  
-    <button (click)="cancelAppointment()" class="btn btn-danger">Cancelar Turno</button>
-  </div>
+
   
+  <mat-card class="shipping-card">  
+    <mat-card-header>
+      <mat-card-title>Cancelar Turno</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>¿Estás seguro de que deseas cancelar tu turno?</p>  
+      <mat-card-actions>
+        <button (click)="cancelAppointment()" class="btn btn-danger">Cancelar Turno</button>
+      </mat-card-actions>
+    </mat-card-content>    
+  </mat-card>
+  
+    
