--- a/src/app/components/appointment/list-appointment/list-appointment.component.html
+++ b/src/app/components/appointment/list-appointment/list-appointment.component.html
@@ -1,7 +1,7 @@
 <mat-card class="mat-elevation-z8">
   
   <mat-card-content>
-    <mat-card-title style="font-size: 34px;">Turnos</mat-card-title><br>
+    <mat-card-title style="font-size: 34px;">Agenda</mat-card-title><br>
     <mat-form-field>
       <mat-label>Fecha</mat-label>
       <input matInput [matDatepicker]="datepicker" [value]="date.value" (dateChange)="onDateChange($event)">
@@ -30,7 +30,8 @@
         <!-- selectedRadio Column -->
         <ng-container matColumnDef="selectedRadio">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Hora</th>
-          <td mat-cell *matCellDef="let row">{{row.selectedRadio}}</td>
+          <td mat-cell *matCellDef="let row" ><div class="custom-cell">{{ row.selectedRadio }}</div></td>
+
         </ng-container>
 
         <!-- first_name Column -->
