--- a/src/app/components/dashboard-navigation/dashboard-navigation.component.html
+++ b/src/app/components/dashboard-navigation/dashboard-navigation.component.html
@@ -63,8 +63,8 @@
 
     <!-- Add Content Here -->
     <app-schedule *ngIf="showSchudule"></app-schedule>
-    <app-create-appointment *ngIf="showCreateAppointment"></app-create-appointment>
-    <app-list-appointment *ngIf="showListAppointment"></app-list-appointment>
+    <app-create-appointment *ngIf="showCreateAppointment"></app-create-appointment><!-- 
+    <app-list-appointment *ngIf="showListAppointment"></app-list-appointment> -->
     <app-user-list *ngIf="showUserList"></app-user-list>
     <app-user-create *ngIf="showUserAdd"></app-user-create>
     <app-change-password *ngIf="showChangePassword"></app-change-password>
