--- a/src/app/components/appointment/create-appointment/create-appointment.component.html
+++ b/src/app/components/appointment/create-appointment/create-appointment.component.html
@@ -68,8 +68,8 @@
       <div class="row">
         <mat-form-field>
           <mat-label>Fecha</mat-label>
-          <input matInput [matDatepicker]="picker" formControlName="date"  (dateChange)="fechaSeleccionada($event)" [min]="minDate" (click)="picker.open()">
-          <!--   <mat-hint>MM/DD/YYYY</mat-hint> -->
+          <input matInput type="text" [matDatepicker]="picker" formControlName="date"  (dateChange)="fechaSeleccionada($event)" [min]="minDate" (click)="picker.open()">
+            <mat-hint>MM/DD/YYYY</mat-hint>
           <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
           <mat-error *ngIf="addressForm.controls['date'].hasError('required')">
