--- a/src/app/components/appointment/cancel-appointments/cancel-appointments.component.html
+++ b/src/app/components/appointment/cancel-appointments/cancel-appointments.component.html
@@ -1,28 +1,34 @@
-<mat-card>
-    <mat-card-content>
-      <mat-card-title>Calendario</mat-card-title>
-        <mat-card-title></mat-card-title>
-        <form [formGroup]="range" novalidate (ngSubmit)="onSubmit()">
-        <mat-form-field>
-            
-            <mat-label>Enter a date range</mat-label>
-            <mat-date-range-input [formGroup]="range" [rangePicker]="picker" [min]="minDate">
-              <input matStartDate formControlName="start" placeholder="Start date">
-              <input matEndDate formControlName="end" placeholder="End date">
-            </mat-date-range-input>
-            <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-date-range-picker #picker></mat-date-range-picker>
-          
-            <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
-            <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
-          </mat-form-field>
-          
-          <!-- <p>Selected range: {{range.value | json}}</p> -->
-          <mat-card-actions>
-            <button mat-raised-button color="accent" type="submit">Guardar</button>
-          </mat-card-actions>
-        </form>
+<mat-card class="shipping-card">
+  <mat-card-content>
+    <mat-card-title>Calendario</mat-card-title>
+    <mat-calendar [dateFilter]="esHabilitado" [(selected)]="selected"></mat-calendar>
+  </mat-card-content>
+  <mat-card-content>
+    <mat-card-title>Bloquear fechas</mat-card-title>
+    <form [formGroup]="range" novalidate (ngSubmit)="onSubmit()">
+      <mat-form-field>
+        <mat-label>Ingrese un rango de fechas</mat-label>
+        <mat-date-range-input [formGroup]="range" [rangePicker]="picker" [min]="minDate">
+          <input matStartDate formControlName="start" placeholder="Start date">
+          <input matEndDate formControlName="end" placeholder="End date">
+        </mat-date-range-input>
+        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-date-range-picker #picker></mat-date-range-picker>
+
+        <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+        <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+      </mat-form-field>
+
+      <div class="instructions">
+        <p>*Para deshabilitar solo un día haga doble clic sobre el mismo</p>
+        <p>*Se cancelarán los turnos que se encuentren vigentes dentro del rango</p>
+        <p>*Se deshabilitarán los días para la toma de turnos</p>
+      </div>
+
+      <mat-card-actions>
+        <button mat-raised-button color="accent" type="submit" class="mr-2">Guardar</button>
         <button mat-raised-button color="accent" type="button" (click)="deleteBlockedDay()">Limpiar</button>
-    </mat-card-content>
+      </mat-card-actions>
+    </form>
+  </mat-card-content>
 </mat-card>
