--- a/src/app/components/appointment/list-appointment/list-appointment.component.html
+++ b/src/app/components/appointment/list-appointment/list-appointment.component.html
@@ -23,11 +23,11 @@
     <div class="table-container">
       <table mat-table class="full-width-table" matSort aria-label="Elements">
         <!-- Id Column -->
-        <!--  <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-      <td mat-cell *matCellDef="let row">{{row.id}}</td>
-    </ng-container>
- -->
+        <ng-container matColumnDef="id" type="hidden">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+          <td mat-cell *matCellDef="let row">{{row.id}}</td>
+        </ng-container>
+ 
         <!-- selectedRadio Column -->
         <ng-container matColumnDef="selectedRadio">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Hora</th>
@@ -77,7 +77,11 @@
         <!-- schedule Column -->
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>actions</th>
-          <td mat-cell *matCellDef="let row"> <button>Eliminar</button></td>
+          <td mat-cell *matCellDef="let row">  
+            <button mat-mini-fab matTooltip="Warn" color="warn" aria-label="Example mini fab with a heart icon"  (click)="eliminarTurno(row.id)" >
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
